# Websocket-Rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.bat  build.rs  build.sh
client/: Cargo.toml
client/src/: main.rs
include/mbedtls/: debug.h  mbedtls_config.h  platform.h
include/websocket/api/: websocket_api.h  websocket_c_api.h  websocket_cpp_api.h
include/websocket/core/: byte_stream.h  endian.h  flate.h  frame.h  handshake.h  http.h  websocket.h
include/websocket/defs/: frameDefs.h  socketDefs.h
server/: Cargo.toml
server/src/: main.rs
src/: binding.rs  bindings.rs  main.rs
