[package]
name = "ws"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
libloading = "0.8.6"
libc = "1.0.0-alpha.1"
cc = "1.2.19"

[build-dependencies]
bindgen = "0.71.1"

[features]
client = []
server = []
default = ["client"]

[[bin]]
name = "client"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["server"]

